add latest post api
Signed-off-by: Karthik Ganeshram <karthik.ganeshram@fermyon.com>

--- a/config.toml
+++ b/config.toml
@@ -25,3 +25,7 @@ defaultMarkdownHandler = "goldmark"
 [markup.goldmark]
 [markup.goldmark.renderer]
 unsafe = true
+
+[outputFormats.JSON]
+mediaType = "application/json"
+isPlainText = true
