--- a/.github/workflows/hugo_build.yml
+++ b/.github/workflows/hugo_build.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build Hugo site
         run: hugo --minify
 
+      - name: Copy CNAME
+        run: cp CNAME public/CNAME
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v1.1.0
         env:
